Plot acomplished full satellite image, pipe system, and leaks loc

--- a/src/water_dist.ipynb
+++ b/src/water_dist.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -454,6 +454,39 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Projected CRS: EPSG:32613>\n",
+       "Name: WGS 84 / UTM zone 13N\n",
+       "Axis Info [cartesian]:\n",
+       "- E[east]: Easting (metre)\n",
+       "- N[north]: Northing (metre)\n",
+       "Area of Use:\n",
+       "- name: World - N hemisphere - 108°W to 102°W - by country\n",
+       "- bounds: (-108.0, 0.0, -102.0, 84.0)\n",
+       "Coordinate Operation:\n",
+       "- name: UTM zone 13N\n",
+       "- method: Transverse Mercator\n",
+       "Datum: World Geodetic System 1984\n",
+       "- Ellipsoid: WGS 84\n",
+       "- Prime Meridian: Greenwich"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "map_df.crs"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 59,
    "metadata": {},
    "outputs": [
@@ -537,6 +570,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -545,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -554,7 +588,7 @@
        "(1922, 11)"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -713,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -722,7 +756,7 @@
        "(1901, 11)"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -887,7 +921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -917,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -937,7 +971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
