--- a/src/EDA.ipynb
+++ b/src/EDA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
     "import numpy as np\n",
     "# import earthpy as et\n",
     "# import earthpy.spatial as es\n",
-    "# import earthpy.plot as ep\n",
+    "import earthpy.plot as ep\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "import geopandas as gpd"
