Crop patche to get more images

--- a/src/data_augmentation.ipynb
+++ b/src/data_augmentation.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -21,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,48 +49,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Data without augmentation:  (825, 21, 21, 14)\n",
-      "Data with augmentation: (842, 21, 21, 14)\n",
-      "Data with augmentation: (859, 21, 21, 14)\n",
-      "Data with augmentation: (877, 21, 21, 14)\n",
-      "Data with augmentation: (895, 21, 21, 14)\n",
-      "Data with augmentation: (913, 21, 21, 14)\n",
-      "Data with augmentation: (932, 21, 21, 14)\n",
-      "Data with augmentation: (951, 21, 21, 14)\n",
-      "Data with augmentation: (971, 21, 21, 14)\n",
-      "Data with augmentation: (991, 21, 21, 14)\n",
-      "Data with augmentation: (1011, 21, 21, 14)\n",
-      "Data with augmentation: (1032, 21, 21, 14)\n",
-      "Data with augmentation: (1053, 21, 21, 14)\n",
-      "Data with augmentation: (1075, 21, 21, 14)\n",
-      "Data with augmentation: (1097, 21, 21, 14)\n",
-      "Data with augmentation: (1119, 21, 21, 14)\n",
-      "Data with augmentation: (1142, 21, 21, 14)\n",
-      "Data with augmentation: (1165, 21, 21, 14)\n",
-      "Data with augmentation: (1189, 21, 21, 14)\n",
-      "Data with augmentation: (1213, 21, 21, 14)\n",
-      "Data with augmentation: (1238, 21, 21, 14)\n",
-      "Data with augmentation: (1263, 21, 21, 14)\n",
-      "Data with augmentation: (1289, 21, 21, 14)\n",
-      "Data with augmentation: (1315, 21, 21, 14)\n",
-      "Data with augmentation: (1342, 21, 21, 14)\n",
-      "Data with augmentation: (1369, 21, 21, 14)\n",
-      "Data with augmentation: (1397, 21, 21, 14)\n",
-      "Data with augmentation: (1425, 21, 21, 14)\n",
-      "Data with augmentation: (1454, 21, 21, 14)\n",
-      "Data with augmentation: (1484, 21, 21, 14)\n",
-      "Data with augmentation: (1514, 21, 21, 14)\n",
-      "Data with augmentation: (1545, 21, 21, 14)\n",
-      "Data with augmentation: (1576, 21, 21, 14)\n",
-      "Data with augmentation: (1608, 21, 21, 14)\n",
-      "Data with augmentation: (1641, 21, 21, 14)\n"
+      "Data without augmentation:  (985, 20, 20, 14)\n",
+      "Data with augmentation: (1005, 20, 20, 14)\n",
+      "Data with augmentation: (1026, 20, 20, 14)\n",
+      "Data with augmentation: (1047, 20, 20, 14)\n",
+      "Data with augmentation: (1068, 20, 20, 14)\n",
+      "Data with augmentation: (1090, 20, 20, 14)\n",
+      "Data with augmentation: (1112, 20, 20, 14)\n",
+      "Data with augmentation: (1135, 20, 20, 14)\n",
+      "Data with augmentation: (1158, 20, 20, 14)\n",
+      "Data with augmentation: (1182, 20, 20, 14)\n",
+      "Data with augmentation: (1206, 20, 20, 14)\n",
+      "Data with augmentation: (1231, 20, 20, 14)\n",
+      "Data with augmentation: (1256, 20, 20, 14)\n",
+      "Data with augmentation: (1282, 20, 20, 14)\n",
+      "Data with augmentation: (1308, 20, 20, 14)\n",
+      "Data with augmentation: (1335, 20, 20, 14)\n",
+      "Data with augmentation: (1362, 20, 20, 14)\n",
+      "Data with augmentation: (1390, 20, 20, 14)\n",
+      "Data with augmentation: (1418, 20, 20, 14)\n",
+      "Data with augmentation: (1447, 20, 20, 14)\n",
+      "Data with augmentation: (1476, 20, 20, 14)\n",
+      "Data with augmentation: (1506, 20, 20, 14)\n",
+      "Data with augmentation: (1537, 20, 20, 14)\n",
+      "Data with augmentation: (1568, 20, 20, 14)\n",
+      "Data with augmentation: (1600, 20, 20, 14)\n",
+      "Data with augmentation: (1632, 20, 20, 14)\n",
+      "Data with augmentation: (1665, 20, 20, 14)\n",
+      "Data with augmentation: (1699, 20, 20, 14)\n",
+      "Data with augmentation: (1733, 20, 20, 14)\n",
+      "Data with augmentation: (1768, 20, 20, 14)\n",
+      "Data with augmentation: (1804, 20, 20, 14)\n",
+      "Data with augmentation: (1841, 20, 20, 14)\n",
+      "Data with augmentation: (1878, 20, 20, 14)\n",
+      "Data with augmentation: (1916, 20, 20, 14)\n",
+      "Data with augmentation: (1955, 20, 20, 14)\n"
      ]
     }
    ],
@@ -98,7 +99,7 @@
     "X_leaks = []\n",
     "for file in files_leak:\n",
     "    image = imread(file)\n",
-    "    if image.shape == (21, 21, 14):\n",
+    "    if image.shape == (20, 20, 14):\n",
     "        X_leaks.append(image)\n",
     "    else: \n",
     "        next\n",
@@ -117,48 +118,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Data without augmentation:  (825, 21, 21, 14)\n",
-      "Data with augmentation: (842, 21, 21, 14)\n",
-      "Data with augmentation: (859, 21, 21, 14)\n",
-      "Data with augmentation: (877, 21, 21, 14)\n",
-      "Data with augmentation: (895, 21, 21, 14)\n",
-      "Data with augmentation: (913, 21, 21, 14)\n",
-      "Data with augmentation: (932, 21, 21, 14)\n",
-      "Data with augmentation: (951, 21, 21, 14)\n",
-      "Data with augmentation: (971, 21, 21, 14)\n",
-      "Data with augmentation: (991, 21, 21, 14)\n",
-      "Data with augmentation: (1011, 21, 21, 14)\n",
-      "Data with augmentation: (1032, 21, 21, 14)\n",
-      "Data with augmentation: (1053, 21, 21, 14)\n",
-      "Data with augmentation: (1075, 21, 21, 14)\n",
-      "Data with augmentation: (1097, 21, 21, 14)\n",
-      "Data with augmentation: (1119, 21, 21, 14)\n",
-      "Data with augmentation: (1142, 21, 21, 14)\n",
-      "Data with augmentation: (1165, 21, 21, 14)\n",
-      "Data with augmentation: (1189, 21, 21, 14)\n",
-      "Data with augmentation: (1213, 21, 21, 14)\n",
-      "Data with augmentation: (1238, 21, 21, 14)\n",
-      "Data with augmentation: (1263, 21, 21, 14)\n",
-      "Data with augmentation: (1289, 21, 21, 14)\n",
-      "Data with augmentation: (1315, 21, 21, 14)\n",
-      "Data with augmentation: (1342, 21, 21, 14)\n",
-      "Data with augmentation: (1369, 21, 21, 14)\n",
-      "Data with augmentation: (1397, 21, 21, 14)\n",
-      "Data with augmentation: (1425, 21, 21, 14)\n",
-      "Data with augmentation: (1454, 21, 21, 14)\n",
-      "Data with augmentation: (1484, 21, 21, 14)\n",
-      "Data with augmentation: (1514, 21, 21, 14)\n",
-      "Data with augmentation: (1545, 21, 21, 14)\n",
-      "Data with augmentation: (1576, 21, 21, 14)\n",
-      "Data with augmentation: (1608, 21, 21, 14)\n",
-      "Data with augmentation: (1641, 21, 21, 14)\n"
+      "Data without augmentation:  (985, 20, 20, 14)\n",
+      "Data with augmentation: (1005, 20, 20, 14)\n",
+      "Data with augmentation: (1026, 20, 20, 14)\n",
+      "Data with augmentation: (1047, 20, 20, 14)\n",
+      "Data with augmentation: (1068, 20, 20, 14)\n",
+      "Data with augmentation: (1090, 20, 20, 14)\n",
+      "Data with augmentation: (1112, 20, 20, 14)\n",
+      "Data with augmentation: (1135, 20, 20, 14)\n",
+      "Data with augmentation: (1158, 20, 20, 14)\n",
+      "Data with augmentation: (1182, 20, 20, 14)\n",
+      "Data with augmentation: (1206, 20, 20, 14)\n",
+      "Data with augmentation: (1231, 20, 20, 14)\n",
+      "Data with augmentation: (1256, 20, 20, 14)\n",
+      "Data with augmentation: (1282, 20, 20, 14)\n",
+      "Data with augmentation: (1308, 20, 20, 14)\n",
+      "Data with augmentation: (1335, 20, 20, 14)\n",
+      "Data with augmentation: (1362, 20, 20, 14)\n",
+      "Data with augmentation: (1390, 20, 20, 14)\n",
+      "Data with augmentation: (1418, 20, 20, 14)\n",
+      "Data with augmentation: (1447, 20, 20, 14)\n",
+      "Data with augmentation: (1476, 20, 20, 14)\n",
+      "Data with augmentation: (1506, 20, 20, 14)\n",
+      "Data with augmentation: (1537, 20, 20, 14)\n",
+      "Data with augmentation: (1568, 20, 20, 14)\n",
+      "Data with augmentation: (1600, 20, 20, 14)\n",
+      "Data with augmentation: (1632, 20, 20, 14)\n",
+      "Data with augmentation: (1665, 20, 20, 14)\n",
+      "Data with augmentation: (1699, 20, 20, 14)\n",
+      "Data with augmentation: (1733, 20, 20, 14)\n",
+      "Data with augmentation: (1768, 20, 20, 14)\n",
+      "Data with augmentation: (1804, 20, 20, 14)\n",
+      "Data with augmentation: (1841, 20, 20, 14)\n",
+      "Data with augmentation: (1878, 20, 20, 14)\n",
+      "Data with augmentation: (1916, 20, 20, 14)\n",
+      "Data with augmentation: (1955, 20, 20, 14)\n"
      ]
     }
    ],
@@ -167,7 +168,7 @@
     "X_nonleaks = []\n",
     "for file in files_nonleak:\n",
     "    image = imread(file)\n",
-    "    if image.shape == (21, 21, 14):\n",
+    "    if image.shape == (20, 20, 14):\n",
     "        X_nonleaks.append(image)\n",
     "    else: \n",
     "        next\n",
@@ -186,16 +187,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(3282, 21, 21, 14)"
+       "(3910, 20, 20, 14)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,23 +208,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "Y = [1 for i in range(0, int(X.shape[0]/2))] + [0 for i in range(0, int(X.shape[0]/2))]\n",
-    "Y = np.array(Y).reshape(3282, 1)"
+    "Y = np.array(Y).reshape(3910, 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Write full sets\n",
-    "np.save(\"../data/clean/X.npy\", X)\n",
-    "np.save(\"../data/clean/Y.npy\", Y)"
+    "np.save(\"../data/clean/X_full.npy\", X)\n",
+    "np.save(\"../data/clean/Y_full.npy\", Y)"
    ]
   }
  ],
