--- a/src/preprocess_patches.ipynb
+++ b/src/preprocess_patches.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -31,13 +32,11 @@
     "import numpy as np\n",
     "import re\n",
     "import tifffile\n",
-    "from skimage.io import imread\n",
-    "import matplotlib.pyplot as plt\n",
-    "import earthpy.plot as ep\n",
-    "import earthpy.spatial as es"
+    "from skimage.io import imread"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -66,6 +65,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,6 +182,14 @@
     "    \n",
     "    stacked_patch = np.transpose(np.stack(stacked_patches))\n",
     "\n",
+    "    # Crop patch\n",
+    "    if stacked_patch.shape == (21, 21, 14):\n",
+    "        stacked_patch = stacked_patch[1:21, 1:21, :]\n",
+    "    if stacked_patch.shape == (20, 21, 14):\n",
+    "        stacked_patch = stacked_patch[:, 1:21, :]\n",
+    "    if stacked_patch.shape == (21, 20, 14):\n",
+    "        stacked_patch = stacked_patch[1:21, :, :]\n",
+    "    \n",
     "    image_name = re.search(r\"(?<=\\\\)(.*?)(?=.B)\", patches_bands[0]).group()\n",
     "    # Add id\n",
     "    image_name = image_name + \"_leak\" + str(id)\n",
@@ -198,6 +206,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -228,10 +237,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 7,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Get list of all patch directories\n",
     "image_directories = os.listdir(\"../data/patches_raw/non_leak\")\n",
@@ -254,6 +262,14 @@
     "            stacked_patches.append(f.read(1))\n",
     "    \n",
     "    stacked_patch = np.transpose(np.stack(stacked_patches))\n",
+    "\n",
+    "    # Crop patch\n",
+    "    if stacked_patch.shape == (21, 21, 14):\n",
+    "        stacked_patch = stacked_patch[1:21, 1:21, :]\n",
+    "    if stacked_patch.shape == (20, 21, 14):\n",
+    "        stacked_patch = stacked_patch[:, 1:21, :]\n",
+    "    if stacked_patch.shape == (21, 20, 14):\n",
+    "        stacked_patch = stacked_patch[1:21, :, :]\n",
     "\n",
     "    image_name = re.search(r\"(?<=\\\\)(.*?)(?=.B)\", patches_bands[0]).group()\n",
     "    # Add id\n",
