RMSE added to download

--- a/src/preprocess_patches.ipynb
+++ b/src/preprocess_patches.ipynb
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,6 +170,7 @@
     "# Get band path for each patch\n",
     "id = 0\n",
     "for image_dir in image_directories_nozips:\n",
+    "    id_leak = re.search(r\"(?<=i)(.*?)(?=d)\", image_dir).group()\n",
     "    patches_bands = glob(\"../data/patches_raw/leak/\" + image_dir + \"/*B*.tif\")\n",
     "    patches_bands.sort(key = my_digit_sort)\n",
     "    patches_bands.append(glob(\"../data/patches_raw/leak/\" + image_dir + \"/*WVP*.tif\")[0])\n",
@@ -192,7 +193,7 @@
     "    \n",
     "    image_name = re.search(r\"(?<=\\\\)(.*?)(?=.B)\", patches_bands[0]).group()\n",
     "    # Add id\n",
-    "    image_name = image_name + \"_leak\" + str(id)\n",
+    "    image_name = image_name + \"_leak\" + str(id) + \"_idLeak_\" + id_leak\n",
     "\n",
     "    # Create stacked image save directory in patches_clean\n",
     "#    save_path = \"../data/patches_clean/leak/\" + image_dir\n",
@@ -215,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,9 +238,10 @@
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Get list of all patch directories\n",
     "image_directories = os.listdir(\"../data/patches_raw/non_leak\")\n",
@@ -251,6 +253,8 @@
     "# Get band path for each patch\n",
     "id = 0\n",
     "for image_dir in image_directories_nozips:\n",
+    "\n",
+    "    id_leak = re.search(r\"(?<=i)(.*?)(?=d)\", image_dir).group()\n",
     "    patches_bands = glob(\"../data/patches_raw/non_leak/\" + image_dir + \"/*B*.tif\")\n",
     "    patches_bands.sort(key = my_digit_sort)\n",
     "    patches_bands.append(glob(\"../data/patches_raw/non_leak/\" + image_dir + \"/*WVP*.tif\")[0])\n",
@@ -273,7 +277,7 @@
     "\n",
     "    image_name = re.search(r\"(?<=\\\\)(.*?)(?=.B)\", patches_bands[0]).group()\n",
     "    # Add id\n",
-    "    image_name = image_name + \"_nonleak\" + str(id)\n",
+    "    image_name = image_name + \"_nonleak\" + str(id) + \"_idLeak_\" + id_leak\n",
     "\n",
     "    # Create stacked image save directory in patches_clean\n",
     "    #save_path = \"../data/patches_clean/non_leak/\" + image_dir\n",
