--- a/src/data_augmentation.ipynb
+++ b/src/data_augmentation.ipynb
@@ -49,48 +49,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Data without augmentation:  (985, 20, 20, 14)\n",
-      "Data with augmentation: (1005, 20, 20, 14)\n",
-      "Data with augmentation: (1026, 20, 20, 14)\n",
-      "Data with augmentation: (1047, 20, 20, 14)\n",
-      "Data with augmentation: (1068, 20, 20, 14)\n",
-      "Data with augmentation: (1090, 20, 20, 14)\n",
-      "Data with augmentation: (1112, 20, 20, 14)\n",
-      "Data with augmentation: (1135, 20, 20, 14)\n",
-      "Data with augmentation: (1158, 20, 20, 14)\n",
-      "Data with augmentation: (1182, 20, 20, 14)\n",
-      "Data with augmentation: (1206, 20, 20, 14)\n",
-      "Data with augmentation: (1231, 20, 20, 14)\n",
-      "Data with augmentation: (1256, 20, 20, 14)\n",
-      "Data with augmentation: (1282, 20, 20, 14)\n",
-      "Data with augmentation: (1308, 20, 20, 14)\n",
-      "Data with augmentation: (1335, 20, 20, 14)\n",
-      "Data with augmentation: (1362, 20, 20, 14)\n",
-      "Data with augmentation: (1390, 20, 20, 14)\n",
-      "Data with augmentation: (1418, 20, 20, 14)\n",
-      "Data with augmentation: (1447, 20, 20, 14)\n",
-      "Data with augmentation: (1476, 20, 20, 14)\n",
-      "Data with augmentation: (1506, 20, 20, 14)\n",
-      "Data with augmentation: (1537, 20, 20, 14)\n",
-      "Data with augmentation: (1568, 20, 20, 14)\n",
-      "Data with augmentation: (1600, 20, 20, 14)\n",
-      "Data with augmentation: (1632, 20, 20, 14)\n",
-      "Data with augmentation: (1665, 20, 20, 14)\n",
-      "Data with augmentation: (1699, 20, 20, 14)\n",
-      "Data with augmentation: (1733, 20, 20, 14)\n",
-      "Data with augmentation: (1768, 20, 20, 14)\n",
-      "Data with augmentation: (1804, 20, 20, 14)\n",
-      "Data with augmentation: (1841, 20, 20, 14)\n",
-      "Data with augmentation: (1878, 20, 20, 14)\n",
-      "Data with augmentation: (1916, 20, 20, 14)\n",
-      "Data with augmentation: (1955, 20, 20, 14)\n"
+      "Data without augmentation:  (984, 20, 20, 14)\n",
+      "Data with augmentation: (1004, 20, 20, 14)\n",
+      "Data with augmentation: (1025, 20, 20, 14)\n",
+      "Data with augmentation: (1046, 20, 20, 14)\n",
+      "Data with augmentation: (1067, 20, 20, 14)\n",
+      "Data with augmentation: (1089, 20, 20, 14)\n",
+      "Data with augmentation: (1111, 20, 20, 14)\n",
+      "Data with augmentation: (1134, 20, 20, 14)\n",
+      "Data with augmentation: (1157, 20, 20, 14)\n",
+      "Data with augmentation: (1181, 20, 20, 14)\n",
+      "Data with augmentation: (1205, 20, 20, 14)\n",
+      "Data with augmentation: (1230, 20, 20, 14)\n",
+      "Data with augmentation: (1255, 20, 20, 14)\n",
+      "Data with augmentation: (1281, 20, 20, 14)\n",
+      "Data with augmentation: (1307, 20, 20, 14)\n",
+      "Data with augmentation: (1334, 20, 20, 14)\n",
+      "Data with augmentation: (1361, 20, 20, 14)\n",
+      "Data with augmentation: (1389, 20, 20, 14)\n",
+      "Data with augmentation: (1417, 20, 20, 14)\n",
+      "Data with augmentation: (1446, 20, 20, 14)\n",
+      "Data with augmentation: (1475, 20, 20, 14)\n",
+      "Data with augmentation: (1505, 20, 20, 14)\n",
+      "Data with augmentation: (1536, 20, 20, 14)\n",
+      "Data with augmentation: (1567, 20, 20, 14)\n",
+      "Data with augmentation: (1599, 20, 20, 14)\n",
+      "Data with augmentation: (1631, 20, 20, 14)\n",
+      "Data with augmentation: (1664, 20, 20, 14)\n",
+      "Data with augmentation: (1698, 20, 20, 14)\n",
+      "Data with augmentation: (1732, 20, 20, 14)\n",
+      "Data with augmentation: (1767, 20, 20, 14)\n",
+      "Data with augmentation: (1803, 20, 20, 14)\n",
+      "Data with augmentation: (1840, 20, 20, 14)\n",
+      "Data with augmentation: (1877, 20, 20, 14)\n",
+      "Data with augmentation: (1915, 20, 20, 14)\n",
+      "Data with augmentation: (1954, 20, 20, 14)\n"
      ]
     }
    ],
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -187,16 +187,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(3910, 20, 20, 14)"
+       "(3909, 20, 20, 14)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,17 +208,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3909, 1)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "Y = [1 for i in range(0, int(X.shape[0]/2))] + [0 for i in range(0, int(X.shape[0]/2))]\n",
-    "Y = np.array(Y).reshape(3910, 1)"
+    "Y = [1 for i in range(0, int(X_leaks_raw.shape[0]))] + [0 for i in range(0, int(X_nonleaks_raw.shape[0]))]\n",
+    "Y = np.array(Y).reshape(X.shape[0], 1)\n",
+    "Y.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
