Descarga de imágenes, preprocesado e inferencia - AGSAL

--- a/src/download_patches_agsal_nonleak.ipynb
+++ b/src/download_patches_agsal_nonleak.ipynb
@@ -31,7 +31,13 @@
     "from datetime import timedelta, datetime\n",
     "\n",
     "# Google Earth Engine\n",
-    "import ee"
+    "import ee\n",
+    "\n",
+    "# Download, utils and LST classes\n",
+    "from src_download import  ee_download, ee_utils, ee_LST\n",
+    "ee_dwld = ee_download()\n",
+    "ee_utils = ee_utils()\n",
+    "ee_LST = ee_LST()"
    ]
   },
   {
@@ -288,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,7 +311,7 @@
     "# Patch download\n",
     "bands = [\"B4\", \"B3\", \"B2\", \"B1\", \"B5\", \"B6\", \"B7\", \"B8\", \"B8A\", \"B9\", \"B11\", \"B12\", \"WVP\"]\n",
     "i = 0\n",
-    "download_path = DATA_ROOT_PATH + \"/patches_raw_agsal/leak/\"\n",
+    "download_path = DATA_ROOT_PATH + \"/patches_raw_agsal/nonleak/\"\n",
     "patch_size = 100\n",
     "index_progress = []\n",
     "id = []\n",
@@ -742,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -751,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -760,7 +766,7 @@
        "(4139, 8)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -771,20 +777,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "FP dir exists! Skipping...\n",
-      "FC dir exists! Skipping...\n",
-      "FB dir exists! Skipping...\n",
-      "TB dir exists! Skipping...\n",
-      "TE dir exists! Skipping...\n",
-      "CT dir exists! Skipping...\n",
-      "FL dir exists! Skipping...\n"
+      "FP dir does not exists! Making directory at ../data/patches_raw_agsal/nonleak/FP...\n",
+      "FC dir does not exists! Making directory at ../data/patches_raw_agsal/nonleak/FC...\n",
+      "FB dir does not exists! Making directory at ../data/patches_raw_agsal/nonleak/FB...\n",
+      "TB dir does not exists! Making directory at ../data/patches_raw_agsal/nonleak/TB...\n",
+      "TE dir does not exists! Making directory at ../data/patches_raw_agsal/nonleak/TE...\n",
+      "CT dir does not exists! Making directory at ../data/patches_raw_agsal/nonleak/CT...\n",
+      "FL dir does not exists! Making directory at ../data/patches_raw_agsal/nonleak/FL...\n"
      ]
     }
    ],
@@ -801,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -815,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -824,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -837,14 +843,14 @@
       "Leak type: FL\n",
       "Leak coords:  (-100.979875, 25.3807165) \n",
       "\n",
-      "Date of selected image (Landsat): 2022-07-14 \n",
-      "Landsat images found:  4 \n",
-      "Cloud %:  9.99\n",
-      "Date of selected image (Sentinel):  2022-07-13 \n",
+      "Date of selected image (Landsat): 2022-08-15 \n",
+      "Landsat images found:  2 \n",
+      "Cloud %:  57.61\n",
+      "Date of selected image (Sentinel):  2022-08-12 \n",
       "Sentinel images found: 3 \n",
-      "Cloud %:  9.483509\n",
-      "Difference between image dates: 1 day, 0:00:00\n",
-      "Difference between date of leak and date of image: 13 days, 0:00:00\n",
+      "Cloud %:  20.687352\n",
+      "Difference between image dates: 3 days, 0:00:00\n",
+      "Difference between date of leak and date of image: 17 days, 0:00:00\n",
       "Download complete\n",
       "====================================================================================================\n",
       "Leak index:  1\n",
@@ -853,14 +859,14 @@
       "Leak type: FL\n",
       "Leak coords:  (-100.9798624, 25.3807062) \n",
       "\n",
-      "Date of selected image (Landsat): 2022-07-14 \n",
-      "Landsat images found:  4 \n",
-      "Cloud %:  9.99\n",
-      "Date of selected image (Sentinel):  2022-07-13 \n",
+      "Date of selected image (Landsat): 2022-08-15 \n",
+      "Landsat images found:  2 \n",
+      "Cloud %:  57.61\n",
+      "Date of selected image (Sentinel):  2022-08-12 \n",
       "Sentinel images found: 3 \n",
-      "Cloud %:  9.483509\n",
-      "Difference between image dates: 1 day, 0:00:00\n",
-      "Difference between date of leak and date of image: 13 days, 0:00:00\n",
+      "Cloud %:  20.687352\n",
+      "Difference between image dates: 3 days, 0:00:00\n",
+      "Difference between date of leak and date of image: 17 days, 0:00:00\n",
       "Download complete\n",
       "====================================================================================================\n",
       "Leak index:  2\n",
@@ -869,14 +875,14 @@
       "Leak type: FL\n",
       "Leak coords:  (-100.9798986, 25.3807318) \n",
       "\n",
-      "Date of selected image (Landsat): 2022-07-14 \n",
-      "Landsat images found:  4 \n",
-      "Cloud %:  9.99\n",
-      "Date of selected image (Sentinel):  2022-07-13 \n",
+      "Date of selected image (Landsat): 2022-08-15 \n",
+      "Landsat images found:  2 \n",
+      "Cloud %:  57.61\n",
+      "Date of selected image (Sentinel):  2022-08-12 \n",
       "Sentinel images found: 3 \n",
-      "Cloud %:  9.483509\n",
-      "Difference between image dates: 1 day, 0:00:00\n",
-      "Difference between date of leak and date of image: 13 days, 0:00:00\n",
+      "Cloud %:  20.687352\n",
+      "Difference between image dates: 3 days, 0:00:00\n",
+      "Difference between date of leak and date of image: 17 days, 0:00:00\n",
       "Download complete\n",
       "====================================================================================================\n",
       "Leak index:  3\n",
@@ -884,14 +890,14 @@
       "Leak type: FL\n",
       "Leak coords:  (-100.9798917, 25.3807348) \n",
       "\n",
-      "Date of selected image (Landsat): 2022-07-14 \n",
-      "Landsat images found:  4 \n",
-      "Cloud %:  9.99\n",
-      "Date of selected image (Sentinel):  2022-07-13 \n",
+      "Date of selected image (Landsat): 2022-08-15 \n",
+      "Landsat images found:  2 \n",
+      "Cloud %:  57.61\n",
+      "Date of selected image (Sentinel):  2022-08-12 \n",
       "Sentinel images found: 3 \n",
-      "Cloud %:  9.483509\n",
-      "Difference between image dates: 1 day, 0:00:00\n",
-      "Difference between date of leak and date of image: 8 days, 0:00:00\n",
+      "Cloud %:  20.687352\n",
+      "Difference between image dates: 3 days, 0:00:00\n",
+      "Difference between date of leak and date of image: 22 days, 0:00:00\n",
       "Download complete\n",
       "====================================================================================================\n",
       "Leak index:  4\n",
@@ -899,14 +905,14 @@
       "Leak type: FL\n",
       "Leak coords:  (-100.9799112, 25.3807323) \n",
       "\n",
-      "Date of selected image (Landsat): 2022-07-14 \n",
-      "Landsat images found:  4 \n",
-      "Cloud %:  9.99\n",
-      "Date of selected image (Sentinel):  2022-07-13 \n",
+      "Date of selected image (Landsat): 2022-08-15 \n",
+      "Landsat images found:  2 \n",
+      "Cloud %:  57.61\n",
+      "Date of selected image (Sentinel):  2022-08-12 \n",
       "Sentinel images found: 3 \n",
-      "Cloud %:  9.483509\n",
-      "Difference between image dates: 1 day, 0:00:00\n",
-      "Difference between date of leak and date of image: 14 days, 0:00:00\n",
+      "Cloud %:  20.687352\n",
+      "Difference between image dates: 3 days, 0:00:00\n",
+      "Difference between date of leak and date of image: 16 days, 0:00:00\n",
       "Download complete\n",
       "====================================================================================================\n",
       "Leak index:  5\n"
@@ -923,7 +929,7 @@
       "\u001b[1;31mValueError\u001b[0m: 5 is not in range",
       "\nThe above exception was the direct cause of the following exception:\n",
       "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[21], line 7\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m100\u001b[39m)\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mLeak index: \u001b[39m\u001b[38;5;124m\"\u001b[39m, leak)\n\u001b[1;32m----> 7\u001b[0m date_leak \u001b[38;5;241m=\u001b[39m datetime\u001b[38;5;241m.\u001b[39mstrptime(\u001b[43mleaks_clean\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfechalegal\u001b[49m\u001b[43m[\u001b[49m\u001b[43mleak\u001b[49m\u001b[43m]\u001b[49m, date_format)\u001b[38;5;241m.\u001b[39mdate()\n\u001b[0;32m      8\u001b[0m id_leak \u001b[38;5;241m=\u001b[39m leaks_clean\u001b[38;5;241m.\u001b[39mid[leak]\n\u001b[0;32m      9\u001b[0m \u001b[38;5;28mid\u001b[39m\u001b[38;5;241m.\u001b[39mappend(id_leak)\n",
+      "Cell \u001b[1;32mIn[11], line 7\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m100\u001b[39m)\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mLeak index: \u001b[39m\u001b[38;5;124m\"\u001b[39m, leak)\n\u001b[1;32m----> 7\u001b[0m date_leak \u001b[38;5;241m=\u001b[39m datetime\u001b[38;5;241m.\u001b[39mstrptime(\u001b[43mleaks_clean\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfechalegal\u001b[49m\u001b[43m[\u001b[49m\u001b[43mleak\u001b[49m\u001b[43m]\u001b[49m, date_format)\u001b[38;5;241m.\u001b[39mdate()\n\u001b[0;32m      8\u001b[0m id_leak \u001b[38;5;241m=\u001b[39m leaks_clean\u001b[38;5;241m.\u001b[39mid[leak]\n\u001b[0;32m      9\u001b[0m \u001b[38;5;28mid\u001b[39m\u001b[38;5;241m.\u001b[39mappend(id_leak)\n",
       "File \u001b[1;32mc:\\Users\\Erick\\anaconda3\\envs\\rs_leaks_env\\lib\\site-packages\\pandas\\core\\series.py:981\u001b[0m, in \u001b[0;36mSeries.__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m    978\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_values[key]\n\u001b[0;32m    980\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m key_is_scalar:\n\u001b[1;32m--> 981\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_get_value\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    983\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m is_hashable(key):\n\u001b[0;32m    984\u001b[0m     \u001b[38;5;66;03m# Otherwise index.get_value will raise InvalidIndexError\u001b[39;00m\n\u001b[0;32m    985\u001b[0m     \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m    986\u001b[0m         \u001b[38;5;66;03m# For labels that don't resolve as scalars like tuples and frozensets\u001b[39;00m\n",
       "File \u001b[1;32mc:\\Users\\Erick\\anaconda3\\envs\\rs_leaks_env\\lib\\site-packages\\pandas\\core\\series.py:1089\u001b[0m, in \u001b[0;36mSeries._get_value\u001b[1;34m(self, label, takeable)\u001b[0m\n\u001b[0;32m   1086\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_values[label]\n\u001b[0;32m   1088\u001b[0m \u001b[38;5;66;03m# Similar to Index.get_value, but we do not fall back to positional\u001b[39;00m\n\u001b[1;32m-> 1089\u001b[0m loc \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mindex\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mlabel\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   1090\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mindex\u001b[38;5;241m.\u001b[39m_get_values_for_loc(\u001b[38;5;28mself\u001b[39m, loc, label)\n",
       "File \u001b[1;32mc:\\Users\\Erick\\anaconda3\\envs\\rs_leaks_env\\lib\\site-packages\\pandas\\core\\indexes\\range.py:393\u001b[0m, in \u001b[0;36mRangeIndex.get_loc\u001b[1;34m(self, key, method, tolerance)\u001b[0m\n\u001b[0;32m    391\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_range\u001b[38;5;241m.\u001b[39mindex(new_key)\n\u001b[0;32m    392\u001b[0m     \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n\u001b[1;32m--> 393\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01merr\u001b[39;00m\n\u001b[0;32m    394\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_check_indexing_error(key)\n\u001b[0;32m    395\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key)\n",
@@ -942,9 +948,8 @@
     "        id_leak = leaks_clean.id[leak]\n",
     "        id.append(id_leak)\n",
     "        \n",
-    "        # Dates for patch\n",
-    "\n",
-    "        end_date_landsat = date_leak - timedelta(days = 5)\n",
+    "        # Dates for patch after leak\n",
+    "        end_date_landsat = date_leak + timedelta(days = 35)\n",
     "        start_date_landsat = end_date_landsat - timedelta(days = 25)    \n",
     "\n",
     "        print(\"Date of leak: \", date_leak)\n",
@@ -968,12 +973,12 @@
     "        leak_lat = leaks_clean[\"x\"][leak]\n",
     "\n",
     "        # Point of leak\n",
-    "        poi = ee.Geometry.Point([leak_lat, leak_lon])\n",
+    "        poi = ee_utils.get_poi(lat=leak_lat, lon=leak_lon)\n",
     " \n",
     "        print(\"Leak coords: \", (leak_lat, leak_lon), \"\\n\")\n",
     "\n",
     "        # Get sentinel and landsat collection of images according to leak coord \n",
-    "        img_landsat = get_landsat_images(start = start_date_landsat, end = end_date_landsat, poi_leak = poi, buffer_regression = 500)\n",
+    "        img_landsat = ee_dwld.get_landsat_images(start = start_date_landsat, end = end_date_landsat, poi_leak = poi, buffer_regression = 500)\n",
     "        landsat_date = ee.Date(img_landsat.get(\"system:time_start\")).format(\"yyyy-MM-dd\").getInfo()\n",
     "        landsat_date = datetime.strptime(landsat_date, \"%Y-%m-%d\").date()\n",
     "\n",
@@ -981,7 +986,7 @@
     "        end_date_sentinel = landsat_date\n",
     "        start_date_sentinel = end_date_sentinel - timedelta(days = 5)    \n",
     "\n",
-    "        img = get_image(start = start_date_sentinel, end = end_date_sentinel, poi_leak = poi)\n",
+    "        img = ee_dwld.get_image(start = start_date_sentinel, end = end_date_sentinel, poi_leak = poi)\n",
     "        sentinel_date = ee.Date(img.get(\"system:time_start\")).format(\"yyyy-MM-dd\").getInfo()\n",
     "        sentinel_date = datetime.strptime(sentinel_date, \"%Y-%m-%d\").date()\n",
     "        \n",
@@ -1000,15 +1005,15 @@
     "        landsat_cloud.append(img_landsat.get(\"CLOUD_COVER\").getInfo())\n",
     "\n",
     "        # Select bands and reduce the hole image to a patch centered on the leak\n",
-    "        img = bands_clip_image(img, buffer_size = patch_size, bands = bands)\n",
+    "        img = ee_utils.bands_clip_image(img, poi=poi, buffer_size = patch_size, bands = bands)\n",
     "\n",
     "        # Estimate lst from landsat image and add its lst band to sentinel image\n",
-    "        lst_image, rmse_value = lst_regression(landsat_image = img_landsat, sentinel_image = img, poi_leak = poi, buffer_size = patch_size, buffer_regression = 500, error = True)\n",
+    "        lst_image, rmse_value = ee_LST.lst_regression(landsat_image = img_landsat, sentinel_image = img, poi_leak = poi, buffer_size = patch_size, buffer_regression = 500, error = True)\n",
     "        rmse.append(rmse_value)\n",
-    "        img = add_lst10m_band(img, lst_image = lst_image)\n",
+    "        img = ee_LST.add_lst10m_band(img, lst_image = lst_image)\n",
     "\n",
     "        # Download image\n",
-    "        download_image(image = img, path = download_path + f\"{leak_type}/\", date_label = date_lab)\n",
+    "        ee_dwld.download_image(image = img, path = download_path + f\"{leak_type}/\", date_label = date_lab)\n",
     "\n",
     "        previous_end_date = date_leak\n",
     "\n",
@@ -1024,8 +1029,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "finished!\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"finished!\")"
+   ]
   }
  ],
  "metadata": {
